--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,7 @@ services:
       MYSQL_DATABASE: todo
       MYSQL_USER: todouser
       MYSQL_PASSWORD: password
+    restart: always
   todo:
     build:
       context: .
